--- a/src/templates/cursos/cursos_disponibles.html
+++ b/src/templates/cursos/cursos_disponibles.html
@@ -4,13 +4,13 @@
 {% block title %}Cursos Disponibles - Edu-Polo{% endblock %}
 
 {% block sidebar_menu %}
-<li><a href="{% url 'dashboard_estudiante' %}"><span class="icon">🏠</span> Inicio</a></li>
-<li><a href="{% url 'cursos:ver_disponibles' %}" class="active"><span class="icon">📚</span> Cursos Disponibles</a></li>
-<li><a href="{% url 'cursos:mis_inscripciones' %}"><span class="icon">✅</span> Mis Inscripciones</a></li>
-<li><a href="{% url 'usuario:gestionar_tutores' %}"><span class="icon">👨‍👩‍👧</span> Mis Tutores</a></li>
-<li><a href="#"><span class="icon">📊</span> Mi Progreso</a></li>
-<li><a href="#"><span class="icon">🎓</span> Certificados</a></li>
-<li><a href="{% url 'usuario:mi_perfil' %}"><span class="icon">👤</span> Mi Perfil</a></li>
+<li><a href="{% url 'dashboard_estudiante' %}"> Inicio</a></li>
+<li><a href="{% url 'cursos:ver_disponibles' %}" class="active"> Cursos Disponibles</a></li>
+<li><a href="{% url 'cursos:mis_inscripciones' %}"> Mis Inscripciones</a></li>
+<li><a href="{% url 'usuario:gestionar_tutores' %}"> Mis Tutores</a></li>
+<li><a href="#"> Mi Progreso</a></li>
+<li><a href="#"> Certificados</a></li>
+<li><a href="{% url 'usuario:mi_perfil' %}"> Mi Perfil</a></li>
 {% endblock %}
 
 {% block content %}
